updated to include webpack v5

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -5,7 +5,7 @@
 /* TYPOGRAPHY - primary, secondary font family & size, etc */
 
 
-/* GRID SYSTEM - column width, grid gaps, etc */
+/* LAYOUT - column width, grid gaps, etc */
 
 
 /* EFFECTS - shadows, delays, gradients, etc */
