--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,14 @@
-@import 'styles/fonts';
 
-@import 'styles/abstract/functions';
-@import 'styles/abstract/mixins';
-@import 'styles/abstract/variables';
+/* ABSTRACT */
 
-@import 'styles/base/animations';
-@import 'styles/base/base';
-@import 'styles/base/typography';
-@import 'styles/base/utilities';
+/* BASE */
 
-@import 'styles/components/button';
+/* COMPONENTS */
 
-@import 'styles/layout/column';
-@import 'styles/layout/header';
-@import 'styles/layout/footer';
+/* LAYOUT */
 
-@import 'styles/pages/home';
+/* PAGES */
+
+/* THEMES */
+
+/* VENDORS */
